--- a/rails-react-es6/app/views/articles/index.html.erb
+++ b/rails-react-es6/app/views/articles/index.html.erb
@@ -26,6 +26,8 @@
 
 <br>
 
+<%= react_component('Hello', {name: 'Mark'}) %>
+
 <%= react_component('Article',
   {initialArticles: @articles},
   {prerender: false}
